# Porthole

./: .gitignore  Makefile  README.md  index.html  package-lock.json  package.json  vite.config.ts
docs/: 2026-04-07-tauri-windows-port-forwarding-design.md  2026-04-07-tauri-windows-port-forwarding-implementation-plan.md  2026-04-07-tauri-windows-port-forwarding-verification-report.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_state.rs  main.rs
src-tauri/src/commands/: app.rs  mod.rs  rules.rs  runtime.rs
src-tauri/src/model/: mod.rs  rule.rs  runtime.rs
src-tauri/src/service/: firewall.rs  gost_process.rs  gost_renderer.rs  mod.rs  rule_store.rs  runtime_events.rs  runtime_state_store.rs  validator.rs
src-tauri/src/support/: job_object.rs  lifecycle.rs  paths.rs  pid_file.rs
src-tauri/tests/: commands_tests.rs  firewall_tests.rs  gost_process_tests.rs  gost_renderer_tests.rs  rule_store_tests.rs  runtime_state_store_tests.rs  validator_tests.rs
src/__tests__/: close-to-tray-dialog.test.tsx  delete-rule-dialog.test.tsx  home-page.test.tsx  log-panel.test.tsx  rule-dialog.test.tsx  rule-list.test.tsx  settings-page.test.tsx  sidebar.test.tsx
src/components/: app-toolbar.tsx  close-to-tray-dialog.tsx  delete-rule-dialog.tsx  log-panel.tsx  page-header.tsx  rule-dialog.tsx  rule-list.tsx  sidebar.tsx  status-bar.tsx
src/hooks/: use-rules.ts  use-runtime-events.ts
src/lib/: api.ts  types.ts  validators.ts
src/pages/: home-page.tsx  logs-page.tsx  (+2 more)
(+1 files in other folders)
