[package]
name = "porthole"
version = "0.1.0"
description = "Porthole desktop application"
authors = ["lifei6671"]
edition = "2021"
default-run = "porthole"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }
toml = "0.8"

[dev-dependencies]
tempfile = "3"
